# clx

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  auto_recall_plan.md  deny.toml  install.sh  justfile  mutants.toml  release-plz.toml  todo_tmp.md
.config/: nextest.toml
crates/clx/: Cargo.toml
crates/clx-core/: Cargo.toml
crates/clx-core/benches/: recall_accuracy.rs
crates/clx-core/src/: config.rs  credentials.rs  embeddings.rs  error.rs  learned_pattern.rs  lib.rs  llm_health.rs  ollama.rs  ollama_health.rs  paths.rs  recall.rs  redaction.rs  summarize.rs  text.rs  types.rs  version.rs
crates/clx-core/src/config/: codex_trust.rs  mod.rs  project.rs  trust.rs
crates/clx-core/src/credentials/: backend.rs  keychain_acl.rs
crates/clx-core/src/llm/: azure.rs  fallback.rs  mod.rs  ollama.rs  retry.rs
crates/clx-core/src/policy/: cache.rs  file_util.rs  llm.rs  matching.rs  mcp.rs  mod.rs  prompts.rs  rate_limiter.rs  read_only.rs  rules.rs  tests.rs  traits.rs  types.rs
crates/clx-core/src/policy/prompts/: validator-high.txt  validator-low.txt  validator-standard.txt
crates/clx-core/src/recall/: adapters.rs  decay.rs  engine.rs  fastembed.rs  mod.rs  ports.rs  rerank.rs  rrf.rs
crates/clx-core/src/storage/: analytics.rs  audit.rs  event.rs  learning.rs  migration.rs  mod.rs  recall_repo.rs  rules.rs  session.rs  snapshot.rs  tests.rs  tool_events.rs  traits.rs  util.rs  validation_cache.rs
crates/clx-core/tests/: codex_trust_behavior.rs  config_resolution_behavior.rs  config_trust_behavior.rs  credentials_backend_behavior.rs  delta_red_r1_poc.rs  delta_red_r2_poc.rs  holistic_red_r1_poc.rs  holistic_red_r2_poc.rs  integration.rs  memory_storage_behavior.rs  migration_v9_purge.rs  read_only_bypass_regression.rs  recall_behavior.rs  recall_rerank_unit.rs  recall_substring_fallback_behavior.rs  red_r1_validator_bypass.rs  red_r2_poc.rs  redaction_property.rs  redaction_scheme_floor_regression.rs  security_fixed_vectors_regression.rs  session_query_behavior.rs  storage_backend_trait_behavior.rs  storage_corrupt_db_behavior.rs  storage_query_behavior.rs  validation_behavior.rs
crates/clx-hook/: Cargo.toml
crates/clx-hook/src/: audit.rs  audit_chain.rs  context.rs  embedding.rs  host.rs  learning.rs  lib.rs  main.rs  output.rs  router.rs  tests.rs  transcript.rs  types.rs
crates/clx-hook/src/hooks/: aggregator.rs  learning_capture.rs  mod.rs  permission_request.rs  post_compact.rs  post_tool_use.rs  pre_compact.rs  pre_tool_use.rs  session_end.rs  session_start.rs  stop_auto_summary.rs  subagent.rs
crates/clx-hook/src/host/: claude.rs  codex.rs  cursor.rs
crates/clx-hook/src/host/codex/: transcript.rs
crates/clx-hook/src/host/cursor/: transcript.rs
crates/clx-hook/src/snapshots/: clx_hook__tests__output_decision_allow_minimal.snap  clx_hook__tests__output_decision_block_full.snap  clx_hook__tests__output_decision_deny_with_reason.snap  clx_hook__tests__output_generic_all_fields.snap  clx_hook__tests__output_generic_session_start_system_msg.snap  clx_hook__tests__output_generic_user_prompt_with_context.snap
crates/clx-hook/tests/: codex_v090_audit.rs  cross_host_regression.rs  holistic_red_r1_poc.rs  hooks_depth_e2e.rs  hooks_router_e2e.rs  host_routing_p4.rs  host_transcript_routing_e2e.rs  integration.rs  learning_mode_e2e.rs  lifecycle_gaps_e2e.rs  memory_hooks_e2e.rs  pre_tool_use_l0_e2e.rs  pre_tool_use_l1_e2e.rs  router_smoke.rs  tool_name_adapter.rs  v090_g1_e2e.rs  v090_red_r1_poc.rs  v090_red_r2_poc.rs  validation_e2e.rs  version_skew_stderr.rs
crates/clx-hook/tests/fixtures/hook_envelopes/: post_tool_use.json  pre_compact.json  pre_tool_use.json  session_start.json  stop.json  stop_event.json  subagent_start.json  user_prompt_submit.json
crates/clx-hook/tests/snapshots/: router_smoke__parse_post_tool_use.snap  router_smoke__parse_pre_compact.snap  router_smoke__parse_pre_tool_use.snap  router_smoke__parse_session_start.snap  router_smoke__parse_stop.snap  router_smoke__parse_stop_event.snap  router_smoke__parse_subagent_start.snap  router_smoke__parse_user_prompt_submit.snap
crates/clx-hook/tests/support/: mod.rs
crates/clx-mcp/: Cargo.toml
crates/clx-mcp/src/: main.rs  server.rs  tests.rs  validation.rs
crates/clx-mcp/src/protocol/: mcp_types.rs  mod.rs  types.rs
crates/clx-mcp/src/tools/: checkpoint.rs  credentials.rs  mod.rs  recall.rs  remember.rs  rules.rs  session_info.rs  stats.rs
crates/clx-mcp/tests/: integration.rs  mcp_protocol_e2e.rs  mcp_tools_depth_e2e.rs  mcp_tools_unit_e2e.rs  multi_host_rules_e2e.rs
crates/clx/src/: main.rs  types.rs
crates/clx/src/codex/: mod.rs  trust.rs
crates/clx/src/commands/: config.rs  credentials.rs  embeddings.rs  health.rs  install.rs  keychain_trust.rs  learning.rs  maintenance.rs  mod.rs  model.rs  recall.rs  rules.rs  trust.rs  version.rs
crates/clx/src/cursor/: mod.rs
crates/clx/src/dashboard/: app.rs  data.rs  event.rs  mod.rs  state.rs
crates/clx/src/dashboard/settings/: config_bridge.rs  fields.rs  mod.rs  render.rs  sections.rs
crates/clx/src/dashboard/state/: tests.rs
crates/clx/src/dashboard/ui/: audit.rs  detail.rs  mod.rs  overview.rs  rules.rs  sessions.rs  settings.rs
crates/clx/tests/: cli_config_deep_e2e.rs  cli_config_e2e.rs  cli_config_edge_e2e.rs  cli_config_get_set_e2e.rs  cli_config_migrate_guard_e2e.rs  cli_credentials_deep_e2e.rs  cli_credentials_edge_e2e.rs  cli_credentials_error_e2e.rs  cli_doctor_health_e2e.rs  cli_e2e.rs  cli_embeddings_deep_e2e.rs  cli_embeddings_e2e.rs  cli_embeddings_route_dim_e2e.rs  cli_install_idempotency_e2e.rs  cli_install_model_deep_e2e.rs  cli_install_uninstall_deep_e2e.rs  cli_maintenance_model_e2e.rs  cli_misc_commands_e2e.rs  cli_recall_deep_e2e.rs  cli_recall_e2e.rs  cli_recall_semantic_e2e.rs  cli_rules_deep_e2e.rs  cli_rules_e2e.rs  cli_rules_export_import_e2e.rs  cli_tests.rs  cli_trust_deep_e2e.rs  dashboard_pixel.rs  embeddings_loop_e2e.rs  install_codex_e2e.rs  install_cursor_e2e.rs  learning_cli_e2e.rs  learning_cli_plain_e2e.rs
plugin/: plugin.json
(+147 files in other folders)
