[package]
name = "clx-core"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for CLX - command validation, context persistence, and shared types"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
tokio.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true
chrono.workspace = true
reqwest.workspace = true
keyring.workspace = true
secrecy.workspace = true
sqlite-vec.workspace = true
trait-variant.workspace = true
url.workspace = true
figment.workspace = true
async-trait = "0.1"
regex.workspace = true

# Per-project config trust (file-hash allowlist, §3.11). sha2/hex are already
# in the transitive graph; pin direct versions so we own the API surface.
sha2 = "0.10"
hex = "0.4"

# Reranker (D2). Pinned at 5.x (ort 2.0 stable, &mut self rerank). Capture
# exact in Cargo.lock after first build. Default features are sufficient for
# TextRerank; we do not enable any optional GPU/CUDA features.
fastembed = "5"

[lints]
workspace = true

[dev-dependencies]
serial_test = "3"
tempfile = "3"
wiremock = "0.6"
rstest = "0.26"
insta = { version = "1", features = ["yaml", "json", "redactions"] }
proptest = "1.5"
tokio = { version = "1", features = ["full"] }
# D4: RAGAS-style recall accuracy bench (`cargo bench --bench recall_accuracy`).
# Dev-dep only; never enters the runtime crate graph. 0.8 uses
# `std::hint::black_box`; we do not import the removed `criterion::black_box`.
criterion = "0.8"

[[bench]]
name = "recall_accuracy"
harness = false
