[package]
name = "clx-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLX hook binary - intercepts and validates Claude Code commands"

[[bin]]
name = "clx-hook"
path = "src/main.rs"

[dependencies]
clx-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
insta = { version = "1", features = ["yaml", "json", "redactions"] }
tokio = { version = "1", features = ["full"] }
chrono.workspace = true
