[package]
name = "clx-hook"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLX hook binary - intercepts and validates Claude Code commands"

[[bin]]
name = "clx-hook"
path = "src/main.rs"

[dependencies]
clx-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
chrono.workspace = true
regex.workspace = true
rusqlite.workspace = true
sha2 = "0.10"
hex = "0.4"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
insta = { version = "1", features = ["yaml", "json", "redactions", "filters"] }
tokio = { version = "1", features = ["full"] }
serial_test = "3"
