[package]
name = "clx-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLX MCP server - provides MCP tools for Claude Code integration"

[[bin]]
name = "clx-mcp"
path = "src/main.rs"

[dependencies]
clx-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
chrono.workspace = true

[lints]
workspace = true

[dev-dependencies]
