[package]
name = "clx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLX CLI - command-line interface for managing CLX configuration and state"

[[bin]]
name = "clx"
path = "src/main.rs"

[dependencies]
clx-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
tokio.workspace = true
clap.workspace = true
clap_complete.workspace = true
indicatif.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
dirs.workspace = true
chrono.workspace = true
reqwest.workspace = true
ratatui = "0.30"
crossterm = "0.28"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
proptest = "1.5"
insta = { workspace = true }
